chore: input values on sets
- fix: end of match
- feat: control when match finish
- feat: ball possession control

--- a/src/assets/Footer.css
+++ b/src/assets/Footer.css
@@ -9,7 +9,6 @@
     gap: 10px;
 }
 
-
 .parte-ateam {
     width: 33%;
     display: flex;
@@ -32,4 +31,5 @@
 
 .scale-effect:hover {
     transform: scale(1.2);
+    cursor: pointer;
 }
