--- a/src/assets/Points.css
+++ b/src/assets/Points.css
@@ -4,11 +4,13 @@
     justify-content: space-evenly;
     gap: 24px;
     margin-bottom: 20px;
+    width: 100%;
 }
 
 .titulo-puntos {
     text-align: center;
     font-size: 2rem;
+    margin: 0;
 }
 
 .point-team-a:hover,
@@ -16,7 +18,6 @@
     cursor: pointer;
     transform: scale(1.2);
 }
-
 
 .rotate-hor-center:hover {
     -webkit-animation: rotate-hor-center 0.5s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
