--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,13 @@ span {
 .name-team-b {
   color: rgb(21, 245, 62);
 }
+
+.tennis-ball {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  color: rgb(119, 178, 85);
+}
