--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   padding: 0;
-  background-color: red;
+  background: linear-gradient(90deg, #0A2751 0%, #2B7335 100%);
   color: white;
   margin: 20px;
   font-size: 1.5em;
