feat: test and something else

--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,8 @@ span {
 }
 
 .tennis-ball {
+  border: none;
+  background-color: inherit;
   width: 100%;
   display: flex;
   align-items: center;
