--- a/app/components/Styles/Footer.css
+++ b/app/components/Styles/Footer.css
@@ -14,6 +14,7 @@
     display: flex;
     justify-content: center;
     justify-content: space-around;
+    color: var(--green-color);
 }
 
 .parte-central {
@@ -27,6 +28,7 @@
     display: flex;
     justify-content: center;
     justify-content: space-around;
+    color: var(--red-color);
 }
 
 .scale-effect:hover {
