--- a/app/components/Styles/Global.css
+++ b/app/components/Styles/Global.css
@@ -1,90 +1,70 @@
-/* Pantalla grande*/
-@media screen and (min-width: 1180px) {
-    .main-layout {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        align-content: center;
-        justify-content: center;
-        align-items: center;
-        gap: 80px;
-        height: 80vh;
-    }
-}
+ .layout {
+     display: flex;
+     flex-direction: column;
+     width: 100%;
+     height: 100vh;
+ }
 
+ .header {
+     display: flex;
+     justify-content: center;
+ }
 
-/* Movil */
-@media screen and (max-width: 500px) {
-    .main-layout {
-        display: flex;
-        flex-direction: column;
-        flex-wrap: nowrap;
-        align-content: center;
-        justify-content: center;
-        align-items: center;
-        gap: 20px;
-    }
-}
+ .footer {
+     display: flex;
+     flex-direction: row;
+     flex-wrap: nowrap;
+     align-content: center;
+     justify-content: center;
+     align-items: center;
+     height: 10vh
+ }
 
-.relleno {
-    padding: 20px;
-}
+ .footer-layout {
+     position: fixed;
+     width: 100%;
+     display: flex;
+     flex-direction: row;
+     flex-wrap: nowrap;
+     align-content: center;
+     justify-content: center;
+     align-items: center;
+     padding-bottom: 10px;
+ }
 
+ .ateam,
+ .point-team-a,
+ .name-team-a {
+     color: var(--green-color)
+ }
 
-.footer-layout {
-    position: fixed;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
-    bottom: 0;
-    left: 0;
-    border-color: bisque;
-    padding-bottom: 10px;
-}
+ .bteam,
+ .point-team-b,
+ .name-team-b {
+     color: var(--red-color)
+ }
 
-body {
-    padding: 0;
-    background: linear-gradient(90deg, #0A2751 0%, #2B7335 100%);
-    color: white;
-    margin: 20px;
-    font-size: 1.5em;
-    font-family: Arial, Helvetica, sans-serif;
-    min-height: 440px;
-}
+ .tennis-ball {
+     border: none;
+     background-color: inherit;
+     width: 100%;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     flex-wrap: nowrap;
+     flex-direction: column;
+ }
 
-span {
-    font-size: 1.4em;
-}
+ .tennis-ball>svg {
+     color: rgb(119, 178, 85);
+ }
 
-.ateam,
-.point-team-a,
-.name-team-a {
-    color: darkturquoise;
-}
+ .tennis-ball>svg:hover {
+     transform: scale(1.5) rotate(20deg);
+     transition-duration: 1s;
+ }
 
-.bteam,
-.point-team-b,
-.name-team-b {
-    color: rgb(21, 245, 62);
-}
-
-.tennis-ball {
-    border: none;
-    background-color: inherit;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: nowrap;
-    flex-direction: column;
-    color: rgb(119, 178, 85);
-}
-
-.tennis-ball svg {
-    width: 30px;
-    height: 30px;
-}
+ .tennis-ball svg {
+     width: 30px;
+     height: 30px;
+ }
