--- a/app/components/Styles/Scoreboard.css
+++ b/app/components/Styles/Scoreboard.css
@@ -1,24 +1,25 @@
 .sets-container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin-bottom: 10px;
+    width: 30%;
+    justify-content: center;
 }
 
 .title-sets {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 2rem;
+    text-align: center;
 }
 
+
 .marcador {
-    padding: 5px;
     display: flex;
     flex-direction: column;
+    gap: 40px;
 }
 
 .team-sets {
     display: flex;
     flex-direction: row;
-    gap: 20px;
+    gap: 40px;
 }
