--- a/app/components/Styles/Global.css
+++ b/app/components/Styles/Global.css
@@ -1,8 +1,20 @@
  .layout {
      display: flex;
-     flex-direction: column;
      width: 100%;
      height: 100vh;
+     flex-direction: column;
+     justify-content: space-evenly
+ }
+
+ .container-title {
+     width: 100%;
+     display: flex;
+     justify-content: center;
+ }
+
+ h1 {
+     font-size: 0.8rem;
+     font-weight: lighter;
  }
 
  .header {
