--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,9 @@
 * {
   margin: 0;
   padding: 0;
-  font-size: 1.3rem;
-  font-family: monospace;
+  font-size: 9vw;
+  font-family: Helvetica;
+  background: #f5f5f5
 }
 
 :root {
