--- a/app/components/Styles/Footer.css
+++ b/app/components/Styles/Footer.css
@@ -26,7 +26,7 @@
     display: flex;
     justify-content: center;
     justify-content: space-around;
-    color: var(--red-color);
+    color: var(--blue--color);
 }
 
 .scale-effect:hover {
