--- a/app/globals.css
+++ b/app/globals.css
@@ -3,10 +3,9 @@
   padding: 0;
   font-size: 9vw;
   font-family: Helvetica;
-  background: #f5f5f5
 }
 
 :root {
-  --red-color: rgb(200, 48, 57);
-  --green-color: rgb(0, 192, 73);
+  --blue-color: rgb(2, 255, 251);
+  --green-color: rgb(1, 246, 95);
 }
